# rust-ios-sample

cargo/: Cargo.toml
ios/Greetings/Greetings/: AppDelegate.swift  ViewController.swift
ios/Greetings/Greetings.xcodeproj/: project.pbxproj
ios/Greetings/Greetings/Base.lproj/: Main.storyboard
ios/Greetings/Greetings/rust/: Greetings-Bridging-Header.h  RustGreetings.swift  greetings.h
