[package]
name = "cargo"
version = "0.1.0"
authors = ["Yohei Okaya <okaya.dcinc@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "greetings"
crate-type = ["staticlib", "cdylib"]

